Fixed scrolling issue on ios

--- a/app/pages/doc/doc.css
+++ b/app/pages/doc/doc.css
@@ -17,6 +17,11 @@
     padding-top: 60px;
 }
 
+.offcanvasActive {
+  width: 100%;
+  overflow: hidden;
+}
+
 
 /* Modal */
 
